fix: create api server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,15 @@
     <button mat-icon-button routerLink="/main/products">
       <mat-icon>shop</mat-icon>
     </button>
+
+    <button mat-button routerLink="/auth/register">
+      <mat-icon>person_add</mat-icon>
+      Sign up
+    </button>
+    <button mat-button routerLink="/auth/login">
+      <mat-icon>input</mat-icon>
+      Sign in
+    </button>
   </div>
 </mat-toolbar>
 
