--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,40 @@
-<mat-toolbar class="toolbar" color="primary">
+<mat-toolbar class="toolbar mat-elevation-z8" color="primary">
   <span>My App</span>
   <div class="routers">
-    <button mat-icon-button routerLink="/main/people">
-      <mat-icon>home</mat-icon>
-    </button>
-    <button mat-icon-button routerLink="/main/products">
-      <mat-icon>shop</mat-icon>
-    </button>
+    <ng-container *ngIf="!(authenticated$ | async)">
+      <button mat-button routerLink="/auth/register">
+        <mat-icon>person_add</mat-icon>
+        Sign up
+      </button>
+      <button mat-button routerLink="/auth/login">
+        <mat-icon>input</mat-icon>
+        Sign in
+      </button>
+    </ng-container>
 
-    <button mat-button routerLink="/auth/register">
-      <mat-icon>person_add</mat-icon>
-      Sign up
-    </button>
-    <button mat-button routerLink="/auth/login">
-      <mat-icon>input</mat-icon>
-      Sign in
-    </button>
+    <ng-container *ngIf="(authenticated$ | async) && (user$ | async)">
+      <button mat-icon-button routerLink="/main/people">
+        <mat-icon>home</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="/main/products">
+        <mat-icon>shop</mat-icon>
+      </button>
+
+      <button mat-icon-button (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+      </button>
+
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>account_circle</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <p style="padding: 10px">{{ (user$ | async)?.email }}</p>
+        <mat-divider></mat-divider>
+        <button mat-menu-item (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+        </button>
+      </mat-menu>
+    </ng-container>
   </div>
 </mat-toolbar>
 
