--- a/src/app/modules/auth/components/login/login.component.scss
+++ b/src/app/modules/auth/components/login/login.component.scss
@@ -4,6 +4,13 @@
   align-items: center;
   margin-top: 100px;
 
+  mat-card {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   mat-card-title {
     text-align: center;
     margin-bottom: 20px;
@@ -20,6 +27,8 @@
 
   mat-card-actions {
     display: flex;
-    justify-content: flex-end;
+    display: flex;
+    align-self: flex-end;
+    padding: 0 70px;
   }
 }
